# cf.rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: buffer.rs  enums.rs  executor.rs  lib.rs  main.rs  painter.rs
test-results/: .gitignore
